# libaccessom2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  build_on_gadi.sh  build_on_raijin.sh  fobos  raijin_env.txt
.github/workflows/: CI.yml
atm/: atm.F90  forcing.F90  params.F90  runoff.F90  util.F90
atm/src/: atm.F90  field.F90  forcing.F90  ice_grid.F90  ice_grid_proxy.F90  kdrunoff_mod.F90  kdtree2_module.F90  params.F90  remap_runoff_mod.F90  restart.F90  runoff.F90  util.F90  yatm_version.F90
build_old/: Macros.nci-scorep  Macros.ubuntu  build_gfdl025-scorep.sh  build_gfdl025.sh  environs.nci
cmake/: FindNetCDF.cmake
ice_stub/src/: ice.F90  ice_grid.F90  ice_old.F90  ice_version.F90
libcouple/: fobos_lib
libcouple/src/: access_om2.F90  accessom2.F90  coupler.F90  coupling_field.F90  date_manager.F90  error_handler.F90  field.F90  libaccessom2_version.F90  logger.F90  ncvar.F90  pio_wrapper.F90  restart.F90  simple_timer.F90  util.F90
libforcing/: README.md  forcing.json  test_input.nc
libforcing/src/: forcing_config.F90  forcing_field.F90  forcing_pertubation.F90  forcing_perturbation.F90  ncvar.F90  util.F90
libforcing/test/: .gitignore  forcing_test.F90  test_forcing_pertubations.py  test_forcing_perturbations.py  test_spatial_input.nc  test_temporal_input.nc  utils.py
libutil/src/: logger.F90  util.F90
ocean_stub/src/: ocean.F90  ocean_version.F90
source/: atm.F90  atm_calendar.F90  atm_domain.F90  atm_forcing.F90  atm_kinds.F90  atm_read.F90  coupler.F90  cpl_arrays.F90  cpl_forcing_handler.F90  cpl_interfaces.F90  cpl_netcdf_setup.F90  cpl_parameters.F90  datm.F90  field.F90  forcing.F90  kdrunoff_mod.F90  matm.F90  nc_util.F90  params.F90  remap_runoff_mod.F90  str_util.F90  test_forcing.F90
test/: input_atm.nml
tests/: copy_test_data.sh  copy_test_data_from_raijin.sh  helper.py  input_atm.nml  pytest.ini  test_matm.py  test_stubs.py  test_yatm.py
tests/ERA5/: accessom2.nml  forcing.json  ice.nml  namcouple  ocean.nml
tests/FORCING_SCALING/: accessom2.nml  checksums.txt  forcing.json
tests/FORCING_SCALING_AND_OFFSET/: forcing.json  ice.nml  ocean.nml
tests/ICE_BYPASS/: forcing.json  namcouple  ocean.nml
tests/JRA55-IAF/: namcouple
tests/JRA55-do/: checksums.txt  ice.nml  ocean.nml
tests/JRA55_IAF/: accessom2.nml  atm.nml  forcing.json  ice.nml  namcouple  ocean.nml
tests/JRA55_IAF_SINGLE_FIELD/: accessom2.nml  checksums.txt  forcing.json  ice.nml  namcouple  ocean.nml
tests/JRA55_RYF/: accessom2.nml  atm.nml  checksums.txt  forcing.json  ice.nml  namcouple  ocean.nml
tests/JRA55_RYF_MINIMAL/: accessom2.nml  checksums.txt  forcing.json  ice.nml  namcouple
tests/JRA55_v1p4_IAF/: accessom2.nml  atm.nml  debug.root.02  forcing.json  ice.nml  namcouple  ocean.nml
tests/atm2ice/: atm.nml  ice.nml  namcouple
tests/atm2ocean/: access_om2.nml  accessom2.nml  atm.nml  atm_forcing.json  forcing.json  ice.nml  namcouple  ocean.nml
tests/data/: kmt.nc
tests/jra55_RYF/: atm.nml  forcing.json  ice.nml  namcouple  ocean.nml
tests/minimal/: accessom2.nml  atm.nml  checksums.txt  forcing.json  ice.nml  model_datetime.nml  namcouple  ocean.nml
tests/src/: ocn.F90
tools/: datetime_generator.py
